[Skia][Cairo] convertImagePixels copies wrongly if no pixel conversion is needed and bytesPerRow are different for source and destination https://bugs.webkit.org/show_bug.cgi?id=286664

Reviewed by Sam Weinig.

<https://commits.webkit.org/241230@main> added a fast code path of
convertImagePixels for Cairo port in case of no pixel conversion was
needed. However, it didn't take bytesPerRow and destinationSize into
account. It didn't work as expected.

<https://commits.webkit.org/277802@main> added a same code for Skia.

* Source/WebCore/platform/graphics/PixelBufferConversion.cpp:
(WebCore::copyImagePixels):
(WebCore::convertImagePixels):
* Source/WebCore/platform/graphics/PixelBufferConversion.h:
* Tools/TestWebKitAPI/CMakeLists.txt:
* Tools/TestWebKitAPI/Tests/WebCore/PixelBufferConversionTests.cpp: Added.
(TestWebKitAPI::TEST(PixelBufferConversionTests, convertImagePixels)):
(TestWebKitAPI::TEST(PixelBufferConversionTests, convertImagePixels2)):

Canonical link: https://commits.webkit.org/289520@main